--- a/editor/editor_config.json
+++ b/editor/editor_config.json
@@ -12,11 +12,11 @@
   "frustum_culling": true,
   "face_culling": true,
   "depth_testing": true,
-  "skybox_color_mode": false,
-  "skybox_solid_r": 0.42156863,
-  "skybox_solid_g": 0.13019031,
-  "skybox_solid_b": 0.26730952,
-  "skybox_path": "C:\\Users\\Usuario\\Downloads\\pngwing.com.png",
+  "skybox_color_mode": true,
+  "skybox_solid_r": 0.05,
+  "skybox_solid_g": 0.05,
+  "skybox_solid_b": 0.15,
+  "skybox_path": "solid:0.05,0.05,0.15",
   "instance_on_add": false,
   "default_instance_count": 1
 }
