Editor is in the house now! proper transaparency blending and multimaterials!

--- a/editor/imgui.ini
+++ b/editor/imgui.ini
@@ -1,7 +1,7 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=553,221
 Size=400,400
-Collapsed=0
+Collapsed=1
 
 [Window][Performance]
 Pos=19,436
@@ -9,12 +9,12 @@ Size=300,200
 Collapsed=1
 
 [Window][Scene Hierarchy]
-Pos=11,25
+Pos=10,30
 Size=300,400
 Collapsed=0
 
 [Window][Inspector]
-Pos=1187,33
+Pos=1034,167
 Size=340,600
 Collapsed=0
 
@@ -34,32 +34,47 @@ Size=500,300
 Collapsed=0
 
 [Window][File Explorer]
-Pos=121,508
-Size=300,150
+Pos=27,604
+Size=401,389
 Collapsed=0
 
 [Window][Console]
-Pos=380,636
-Size=1240,350
+Pos=450,622
+Size=1474,394
 Collapsed=0
 
 [Window][Add Light]
-Pos=761,390
+Pos=761,354
 Size=400,300
 Collapsed=0
 
 [Window][Style Editor]
-Pos=1376,19
+Pos=1344,387
 Size=500,600
-Collapsed=1
+Collapsed=0
 
 [Window][Advanced Rendering]
-Pos=518,71
+Pos=1136,470
 Size=400,450
 Collapsed=0
 
 [Window][Scene Settings]
-Pos=1541,6
+Pos=1397,73
 Size=370,420
+Collapsed=0
+
+[Window][Gopher3D - Project Manager]
+Pos=660,340
+Size=600,400
+Collapsed=0
+
+[Window][Add Voxel Terrain]
+Pos=711,340
+Size=500,400
+Collapsed=0
+
+[Window][Add Water]
+Pos=761,390
+Size=400,300
 Collapsed=0
 
