FXAA, MSAA, Advanced rendering options in panel

--- a/editor_config.json
+++ b/editor_config.json
@@ -6,58 +6,58 @@
   "show_advanced_render": true,
   "show_scene_settings": true,
   "hierarchy_layout": {
-    "pos_x": 10,
-    "pos_y": 30,
+    "pos_x": -10,
+    "pos_y": 18,
     "size_x": 289,
     "size_y": 456,
     "collapsed": false
   },
   "inspector_layout": {
-    "pos_x": 1546,
-    "pos_y": 516,
+    "pos_x": 1490,
+    "pos_y": 85,
     "size_x": 427,
     "size_y": 540,
     "collapsed": false
   },
   "file_explorer_layout": {
-    "pos_x": 10,
-    "pos_y": 720,
+    "pos_x": 1,
+    "pos_y": 752,
     "size_x": 794,
     "size_y": 252,
     "collapsed": false
   },
   "console_layout": {
-    "pos_x": 883,
-    "pos_y": 649,
+    "pos_x": 793,
+    "pos_y": 681,
     "size_x": 738,
     "size_y": 323,
     "collapsed": false
   },
   "scene_settings_layout": {
-    "pos_x": 1583,
-    "pos_y": 179,
+    "pos_x": 513,
+    "pos_y": 28,
     "size_x": 450,
     "size_y": 303,
     "collapsed": false
   },
   "advanced_render_layout": {
-    "pos_x": 760,
-    "pos_y": 100,
-    "size_x": 226,
-    "size_y": 169,
+    "pos_x": 919,
+    "pos_y": 150,
+    "size_x": 528,
+    "size_y": 554,
     "collapsed": false
   },
-  "clear_color_r": 0.23623125,
-  "clear_color_g": 0.44523823,
-  "clear_color_b": 0.5539216,
+  "clear_color_r": 0.4,
+  "clear_color_g": 0.6,
+  "clear_color_b": 0.9,
   "wireframe_mode": false,
   "frustum_culling": true,
   "face_culling": false,
   "depth_testing": true,
   "skybox_color_mode": true,
-  "skybox_solid_r": 0.23623125,
-  "skybox_solid_g": 0.44523823,
-  "skybox_solid_b": 0.5539216,
+  "skybox_solid_r": 0.4,
+  "skybox_solid_g": 0.6,
+  "skybox_solid_b": 0.9,
   "skybox_path": "",
   "instance_on_add": false,
   "default_instance_count": 1
