Proper post processing, GameObjects and Components

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=1159,326
+Pos=619,326
 Size=400,400
 Collapsed=0
 
@@ -9,22 +9,22 @@ Size=794,252
 Collapsed=0
 
 [Window][Console]
-Pos=793,681
-Size=738,323
+Pos=800,699
+Size=1045,323
 Collapsed=0
 
 [Window][Scene Hierarchy]
-Pos=-10,18
+Pos=-10,17
 Size=289,456
 Collapsed=0
 
 [Window][Inspector]
-Pos=1490,85
-Size=427,540
+Pos=1240,98
+Size=512,795
 Collapsed=0
 
 [Window][Add Voxel Terrain]
-Pos=711,340
+Pos=749,304
 Size=500,400
 Collapsed=0
 
@@ -34,17 +34,17 @@ Size=400,300
 Collapsed=0
 
 [Window][Style Editor]
-Pos=1051,135
+Pos=480,45
 Size=500,600
 Collapsed=1
 
 [Window][Advanced Rendering]
-Pos=919,150
+Pos=848,199
 Size=528,554
 Collapsed=0
 
 [Window][Add Model]
-Pos=759,254
+Pos=761,254
 Size=400,500
 Collapsed=0
 
@@ -61,5 +61,10 @@ Collapsed=0
 [Window][Gopher3D - Project Manager]
 Pos=660,340
 Size=600,400
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=650,39
+Size=550,680
 Collapsed=0
 
