feat: Unity-style scripting, CI/CD, game export, tests, and editor improvements
Major Features:
- Unity-style component system with GameObject, Transform, and script lifecycle (Start/Update/FixedUpdate)
- Visual script attachment via Inspector panel with search functionality
- Game export feature (File > Export Game) for standalone executables

CI/CD:
- GitHub Actions workflow for PR checks (test, vet, build on Windows/Linux/macOS)
- Release workflow for automatic builds on git tags (v*)
- PowerShell build script (build.ps1) for Windows development

Testing:
- Unit tests for behaviour package (component, component_manager, script_registry)
- Unit tests for loader package (voxel_core)
- Unit tests for renderer package (camera, uniform_cache, advanced_rendering_config)

Editor Improvements:
- Dark mode window borders on Windows (DWM API)
- Panel close buttons (X) on all panels
- Larger default panel sizes
- Window border color customization in Style Editor
- Config persistence for style colors

Fixes:
- Sun light intensity default changed from 4.5 to 1.0
- Skybox texture loading optimized (512px max, direct pixel copy)
- FXAA/Bloom post-processing stability
- Voxel color customization
- Script list sorting (alphabetical)

Documentation:
- Updated README with installation instructions
- Windows SmartScreen notice for unsigned executables
- Build script usage documentation

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@
 *.dylib
 *.log
 
-
 # Test binary, built with `go test -c`
 *.test
 
@@ -21,3 +20,19 @@
 
 # Go workspace file
 go.work
+
+# Editor configuration (user-specific)
+editor_config.json
+
+# Build output
+bin/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
