--- a/editor/imgui.ini
+++ b/editor/imgui.ini
@@ -14,7 +14,7 @@ Size=300,400
 Collapsed=0
 
 [Window][Inspector]
-Pos=1376,28
+Pos=1581,14
 Size=340,600
 Collapsed=0
 
@@ -34,12 +34,12 @@ Size=500,300
 Collapsed=0
 
 [Window][File Explorer]
-Pos=27,604
+Pos=15,611
 Size=401,389
 Collapsed=0
 
 [Window][Console]
-Pos=388,482
+Pos=428,612
 Size=1474,394
 Collapsed=0
 
@@ -49,7 +49,7 @@ Size=400,300
 Collapsed=0
 
 [Window][Style Editor]
-Pos=1344,387
+Pos=1393,212
 Size=500,600
 Collapsed=0
 
@@ -59,9 +59,9 @@ Size=400,450
 Collapsed=0
 
 [Window][Scene Settings]
-Pos=1300,124
+Pos=985,164
 Size=370,420
-Collapsed=1
+Collapsed=0
 
 [Window][Gopher3D - Project Manager]
 Pos=660,340
@@ -69,12 +69,32 @@ Size=600,400
 Collapsed=0
 
 [Window][Add Voxel Terrain]
-Pos=711,338
-Size=500,400
+Pos=711,224
+Size=500,560
 Collapsed=0
 
 [Window][Add Water]
 Pos=761,354
 Size=400,300
+Collapsed=0
+
+[Window][##ProjectManager]
+Pos=0,0
+Size=1920,1080
+Collapsed=0
+
+[Window][Gopher3D]
+Pos=400,160
+Size=480,400
+Collapsed=0
+
+[Window][Project]
+Pos=15,611
+Size=418,388
+Collapsed=0
+
+[Window][Hierarchy]
+Pos=-1,20
+Size=428,585
 Collapsed=0
 
