Fixes for exporting

--- a/editor/imgui.ini
+++ b/editor/imgui.ini
@@ -84,7 +84,7 @@ Size=1920,1080
 Collapsed=0
 
 [Window][Gopher3D]
-Pos=400,160
+Pos=720,304
 Size=480,400
 Collapsed=0
 
@@ -96,5 +96,10 @@ Collapsed=0
 [Window][Hierarchy]
 Pos=-1,20
 Size=428,585
+Collapsed=0
+
+[Window][Export Game]
+Pos=760,354
+Size=400,350
 Collapsed=0
 
