Script behaviour firstpass

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,8 @@ jobs:
           go vet ./internal/renderer/...
           go vet ./internal/logger/...
           go vet ./scripts/...
+          go vet ./editor/internal/...
+          go vet ./editor/cmd/...
 
       - name: Run tests
         run: |
@@ -103,8 +105,7 @@ jobs:
           GOARCH: ${{ matrix.goarch }}
           CGO_ENABLED: 1
         run: |
-          cd editor
-          go build -o ../bin/gopher3d-editor-${{ matrix.goos }}-${{ matrix.goarch }}${{ matrix.ext }} .
+          go build -o bin/gopher3d-editor-${{ matrix.goos }}-${{ matrix.goarch }}${{ matrix.ext }} ./editor/cmd/...
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
