feat: Improve scene save/load, export system, and component management
Scene Management:
- Fix voxel terrain save/load - properly store VoxelConfig in model metadata
- Fix voxel colors not persisting - remove omitempty from color JSON tags
- Fix black voxels on load - set material DiffuseColor to white for proper instance color rendering
- Fix water component not creating GameObject on scene load
- Add model-to-GameObject mapping for voxel/water creation
- Improve component deserialization for all component types

Export System:
- Add water plane generation with animation support for exported games
- Fix skybox color saving - use actual renderer clear color instead of global variable
- Add fallback to rendering config skybox color
- Copy scripts from both engine and project directories
- Fix depth testing and z-fighting issues with water/terrain

Component System:
- Fix script component showing 'unknown' name - properly wrap in ScriptComponent
- Add real-time water component editing via SyncWaterComponentToSimulation
- Remove non-functional Perlin Noise and High Quality Filtering UI options

Rendering:
- Rewrite bloom shader for better performance - simple 4-tap box blur
- Remove problematic tone mapping from bloom
- Fix voxel material initialization - set all properties not just exposure/alpha

Scripts:
- Add example scripts (bounce, orbit, rotate, check, test)
- Scripts auto-register via init() functions

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,8 +9,8 @@ Size=794,252
 Collapsed=0
 
 [Window][Console]
-Pos=800,699
-Size=1045,323
+Pos=280,809
+Size=1320,200
 Collapsed=0
 
 [Window][Scene Hierarchy]
@@ -19,13 +19,13 @@ Size=289,456
 Collapsed=0
 
 [Window][Inspector]
-Pos=1240,98
-Size=512,795
+Pos=1600,20
+Size=320,989
 Collapsed=0
 
 [Window][Add Voxel Terrain]
-Pos=749,304
-Size=500,400
+Pos=711,224
+Size=500,560
 Collapsed=0
 
 [Window][Add Water]
@@ -66,5 +66,20 @@ Collapsed=0
 [Window][Dear ImGui Demo]
 Pos=650,39
 Size=550,680
+Collapsed=0
+
+[Window][Gopher3D]
+Pos=400,160
+Size=480,400
+Collapsed=0
+
+[Window][Project]
+Pos=0,809
+Size=280,200
+Collapsed=0
+
+[Window][Hierarchy]
+Pos=0,20
+Size=280,789
 Collapsed=0
 
