Editor improvements: gizmos, water export, voxel colors, documentation
## Editor UI
- Fix orientation gizmo positioning (now properly centered in top-right corner)
- Fix gizmo drag direction (X and Z axes were inverted)
- Add gizmos for lights with proper movement
- Fix double-click focus distance for lights

## Water System
- Move water simulation to shared internal/water package
- Fix extra static plane appearing in exported games
- Skip water model from scene Models array (handled separately)
- Ensure water shader compiles before setting uniforms

## Voxel System
- Fix voxel colors not being saved (ColorGrass, ColorDirt, etc. were missing)
- Add type metadata field for voxel terrain models
- Clear custom voxel colors on new scene to prevent color bleeding
- Improve color preservation when loading scenes

## Scene Management
- Add BehaviourManager.Clear() for proper scene cleanup
- Reset skybox state variables on new scene
- Reset UI state flags on new scene
- Reset voxel colors on new scene
- Improve model quaternion initialization (identity instead of zero)

## Rendering
- Add FXAA uniform settings (edgeThreshold, edgeThresholdMin, subpixelQuality)
- Fix model rotation initialization with identity quaternion

## Documentation
- Complete rewrite of editor/README.md with panels, controls, export guide
- Update main README.md with build script docs, architecture, requirements
- Add table of contents and professional formatting

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,8 +9,8 @@ Size=794,252
 Collapsed=0
 
 [Window][Console]
-Pos=280,809
-Size=1320,200
+Pos=280,520
+Size=680,200
 Collapsed=0
 
 [Window][Scene Hierarchy]
@@ -19,12 +19,12 @@ Size=289,456
 Collapsed=0
 
 [Window][Inspector]
-Pos=1600,20
-Size=320,989
+Pos=984,40
+Size=320,700
 Collapsed=0
 
 [Window][Add Voxel Terrain]
-Pos=711,224
+Pos=392,79
 Size=500,560
 Collapsed=0
 
@@ -74,12 +74,17 @@ Size=480,400
 Collapsed=0
 
 [Window][Project]
-Pos=0,809
+Pos=0,520
 Size=280,200
 Collapsed=0
 
 [Window][Hierarchy]
 Pos=0,20
-Size=280,789
+Size=280,500
+Collapsed=0
+
+[Window][Export Game]
+Pos=440,210
+Size=400,380
 Collapsed=0
 
