--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,11 +9,7 @@ on:
 jobs:
   test:
     name: Test
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
-        go-version: ['1.22']
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
@@ -22,10 +18,9 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: ${{ matrix.go-version }}
+          go-version: '1.22'
 
-      - name: Install dependencies (Linux)
-        if: runner.os == 'Linux'
+      - name: Install dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y libgl1-mesa-dev xorg-dev libxcursor-dev libxrandr-dev libxinerama-dev libxi-dev libgtk-3-dev
@@ -36,9 +31,9 @@ jobs:
           path: |
             ~/go/pkg/mod
             ~/.cache/go-build
-          key: ${{ runner.os }}-go-${{ matrix.go-version }}-${{ hashFiles('**/go.sum') }}
+          key: ${{ runner.os }}-go-1.22-${{ hashFiles('**/go.sum') }}
           restore-keys: |
-            ${{ runner.os }}-go-${{ matrix.go-version }}-
+            ${{ runner.os }}-go-1.22-
 
       - name: Download dependencies
         run: go mod download
@@ -52,13 +47,12 @@ jobs:
           go vet ./internal/water/...
 
       - name: Run tests
-        run: |
-          go test -v ./internal/behaviour/...
-          go test -v ./internal/loader/...
-          go test -v ./internal/renderer/...
+        run: go test -v ./internal/...
 
+  # Only build on push to main, not on PRs (saves CI time)
   build:
     name: Build
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ${{ matrix.os }}
     needs: test
     strategy:
