--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,23 +53,8 @@ jobs:
   build:
     name: Build
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    runs-on: ${{ matrix.os }}
+    runs-on: windows-latest
     needs: test
-    strategy:
-      matrix:
-        include:
-          - os: windows-latest
-            goos: windows
-            goarch: amd64
-            ext: .exe
-          - os: ubuntu-latest
-            goos: linux
-            goarch: amd64
-            ext: ""
-          - os: macos-latest
-            goos: darwin
-            goarch: amd64
-            ext: ""
 
     steps:
       - name: Checkout code
@@ -80,27 +65,14 @@ jobs:
         with:
           go-version: '1.22'
 
-      - name: Install dependencies (Linux)
-        if: runner.os == 'Linux'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libgl1-mesa-dev xorg-dev libxcursor-dev libxrandr-dev libxinerama-dev libxi-dev libgtk-3-dev
-
-      - name: Install dependencies (macOS)
-        if: runner.os == 'macOS'
-        run: |
-          brew install glfw gtk+3
-
       - name: Build editor
         env:
-          GOOS: ${{ matrix.goos }}
-          GOARCH: ${{ matrix.goarch }}
           CGO_ENABLED: 1
         run: |
-          go build -o bin/gopher3d-editor-${{ matrix.goos }}-${{ matrix.goarch }}${{ matrix.ext }} ./editor/cmd/...
+          go build -o bin/gopher3d-editor.exe ./editor/cmd/...
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
-          name: gopher3d-editor-${{ matrix.goos }}-${{ matrix.goarch }}
-          path: bin/gopher3d-editor-${{ matrix.goos }}-${{ matrix.goarch }}${{ matrix.ext }}
+          name: gopher3d-editor-windows-amd64
+          path: bin/gopher3d-editor.exe
