--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,26 +48,7 @@ jobs:
   build-and-release:
     name: Build and Release
     needs: version
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        include:
-          - os: windows-latest
-            goos: windows
-            goarch: amd64
-            ext: .exe
-          - os: ubuntu-latest
-            goos: linux
-            goarch: amd64
-            ext: ""
-          - os: macos-latest
-            goos: darwin
-            goarch: amd64
-            ext: ""
-          - os: macos-latest
-            goos: darwin
-            goarch: arm64
-            ext: ""
+    runs-on: windows-latest
 
     steps:
       - name: Checkout code
@@ -78,42 +59,22 @@ jobs:
         with:
           go-version: '1.22'
 
-      - name: Install dependencies (Linux)
-        if: runner.os == 'Linux'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libgl1-mesa-dev xorg-dev libxcursor-dev libxrandr-dev libxinerama-dev libxi-dev libgtk-3-dev
-
-      - name: Install dependencies (macOS)
-        if: runner.os == 'macOS'
-        run: |
-          brew install glfw gtk+3
-
       - name: Build editor
         env:
-          GOOS: ${{ matrix.goos }}
-          GOARCH: ${{ matrix.goarch }}
           CGO_ENABLED: 1
         run: |
-          go build -ldflags="-s -w -X main.Version=${{ needs.version.outputs.version }}" -o bin/gopher3d-editor-${{ matrix.goos }}-${{ matrix.goarch }}${{ matrix.ext }} ./editor/cmd/...
+          go build -ldflags="-s -w -X main.Version=${{ needs.version.outputs.version }}" -o bin/gopher3d-editor.exe ./editor/cmd/...
 
-      - name: Create archive (Windows)
-        if: matrix.goos == 'windows'
+      - name: Create archive
         run: |
           cd bin
-          7z a gopher3d-editor-${{ matrix.goos }}-${{ matrix.goarch }}.zip gopher3d-editor-${{ matrix.goos }}-${{ matrix.goarch }}${{ matrix.ext }}
-
-      - name: Create archive (Unix)
-        if: matrix.goos != 'windows'
-        run: |
-          cd bin
-          tar -czvf gopher3d-editor-${{ matrix.goos }}-${{ matrix.goarch }}.tar.gz gopher3d-editor-${{ matrix.goos }}-${{ matrix.goarch }}${{ matrix.ext }}
+          7z a gopher3d-editor-windows-amd64.zip gopher3d-editor.exe
 
       - name: Upload release artifact
         uses: actions/upload-artifact@v4
         with:
-          name: gopher3d-editor-${{ matrix.goos }}-${{ matrix.goarch }}
-          path: bin/gopher3d-editor-${{ matrix.goos }}-${{ matrix.goarch }}.*
+          name: gopher3d-editor-windows-amd64
+          path: bin/gopher3d-editor-windows-amd64.zip
 
   create-release:
     name: Create Release
@@ -146,6 +107,5 @@ jobs:
           generate_release_notes: true
           files: |
             artifacts/**/*.zip
-            artifacts/**/*.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
